--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+/* PÁGINA HOME */
 .bloco{
     background-color: #ccc;
     height: 50vh;
@@ -11,4 +12,9 @@
 .w-500{
     width: 500px;
 }
-.social i:hover{color:#0d6efd; transform:scale(1.5); transform: rotate(20deg);}
+.social i:hover{color:#0d6efd; transform:scale(1.5); transform: rotate(15deg);}
+
+/* EFEITO MENU ATIVO */
+.active{
+    border-bottom: 1px solid #fff;
+}
